--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -15,6 +15,10 @@ header h1 {
     vertical-align: middle;
 }
 
+.cancel {
+    margin-right: 0px;
+}
+
 header .logo {
     left: 26px;
     top: 36px;
